Fix problem on #THRIFT-3370