lib/c_glib/src/thrift/c_glib/transport/thrift_server_socket.c
@@ -43,7 +43,7 @@ enum _ThriftServerSocketProperties
 #define THRIFT_SERVER_SOCKET_ERROR_DOMAIN "thrift-server-socket-error-quark"
 
 /* for errors coming from socket() and connect() */
-extern int errno;
+//extern int errno;
 
 G_DEFINE_TYPE(ThriftServerSocket, thrift_server_socket, THRIFT_TYPE_SERVER_TRANSPORT)
 
